add new website from server na

--- a/xem-phim-moi/du-an-mat-tham-hoa-tren-cau/index.html
+++ b/xem-phim-moi/du-an-mat-tham-hoa-tren-cau/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1779,18 +1779,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-trom-khet-tieng" title="Siêu Trộm Khét Tiếng">
+          <a class="list-top-movie-link" href="/phim-moi/vo-chong-nguy-trang" title="Vợ Chồng Ngụy Trang">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-trom-khet-tieng-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-chong-nguy-trang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siêu Trộm Khét Tiếng
+             Vợ Chồng Ngụy Trang
             </span>
             <span class="list-top-movie-item-en">
-             Out of Sight
+             Fake Marriage
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/yeu-mieu-truyen" title="Yêu miêu truyện">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-mieu-truyen-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Yêu miêu truyện
+            </span>
+            <span class="list-top-movie-item-en">
+             Legend of the Demon Cat
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1801,40 +1823,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-ly" title="Công Lý">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-ly-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Công Lý
-            </span>
-            <span class="list-top-movie-item-en">
-             Justice
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-day-phan-1" title="Mặt Dày (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/dem-chau-a-am-thuc-khieu-vu-mo-mong" title="Đêm châu Á: Ẩm thực – Khiêu vũ – Mơ mộng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-day-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-chau-a-am-thuc-khieu-vu-mo-mong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mặt Dày (Phần 1)
+             Đêm châu Á: Ẩm thực – Khiêu vũ – Mơ mộng
             </span>
             <span class="list-top-movie-item-en">
-             Shameless (Season 1)
+             Midnight Asia: Eat · Dance · Dream
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1845,21 +1845,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giac-mo-my-phan-1" title="Giấc Mơ Mỹ (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/nhan-danh-cong-ly-2" title="Nhân Danh Công Lý 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giac-mo-my-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhan-danh-cong-ly-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giấc Mơ Mỹ (Phần 1)
+             Nhân Danh Công Lý 2
             </span>
             <span class="list-top-movie-item-en">
-             Little America (Season 1)
+             Drishyam 2
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1867,18 +1867,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-truong-laserhawk-blood-dragon-remix" title="Đội trưởng Laserhawk: Blood Dragon Remix">
+          <a class="list-top-movie-link" href="/phim-moi/cau-be-thien-tai" title="Cậu bé thiên tài">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-truong-laserhawk-blood-dragon-remix-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-be-thien-tai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đội trưởng Laserhawk: Blood Dragon Remix
+             Cậu bé thiên tài
             </span>
             <span class="list-top-movie-item-en">
-             Captain Laserhawk: A Blood Dragon Remix
+             Genius Boy
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
