add new website from server na

--- a/xem-phim-moi/du-an-mat-tham-hoa-tren-cau/index.html
+++ b/xem-phim-moi/du-an-mat-tham-hoa-tren-cau/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1779,40 +1779,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vo-chong-nguy-trang" title="Vợ Chồng Ngụy Trang">
+          <a class="list-top-movie-link" href="/phim-moi/phu-thuy-trang-diem" title="Phù thủy trang điểm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-chong-nguy-trang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phu-thuy-trang-diem-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vợ Chồng Ngụy Trang
+             Phù thủy trang điểm
             </span>
             <span class="list-top-movie-item-en">
-             Fake Marriage
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yeu-mieu-truyen" title="Yêu miêu truyện">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-mieu-truyen-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Yêu miêu truyện
-            </span>
-            <span class="list-top-movie-item-en">
-             Legend of the Demon Cat
+             Glow Up
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1823,18 +1801,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-chau-a-am-thuc-khieu-vu-mo-mong" title="Đêm châu Á: Ẩm thực – Khiêu vũ – Mơ mộng">
+          <a class="list-top-movie-link" href="/phim-moi/tu-khoa-tinh-yeu-search-www" title="Từ Khóa Tình Yêu: Search WWW">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-chau-a-am-thuc-khieu-vu-mo-mong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tu-khoa-tinh-yeu-search-www-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đêm châu Á: Ẩm thực – Khiêu vũ – Mơ mộng
+             Từ Khóa Tình Yêu: Search WWW
             </span>
             <span class="list-top-movie-item-en">
-             Midnight Asia: Eat · Dance · Dream
+             Search: WWW
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/boys-from-county-hell" title="Boys from County Hell">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/boys-from-county-hell-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Boys from County Hell
+            </span>
+            <span class="list-top-movie-item-en">
+             Boys from County Hell
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1845,21 +1845,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhan-danh-cong-ly-2" title="Nhân Danh Công Lý 2">
+          <a class="list-top-movie-link" href="/phim-moi/detox" title="Detox">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhan-danh-cong-ly-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/detox-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhân Danh Công Lý 2
+             Detox
             </span>
             <span class="list-top-movie-item-en">
-             Drishyam 2
+             Off the Hook
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1867,18 +1867,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cau-be-thien-tai" title="Cậu bé thiên tài">
+          <a class="list-top-movie-link" href="/phim-moi/vua-ho-phan-1" title="Vua hổ (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-be-thien-tai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-ho-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cậu bé thiên tài
+             Vua hổ (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Genius Boy
+             Tiger King (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
