add new website from server na

--- a/xem-phim-moi/rua-toi-cho-quy/index.html
+++ b/xem-phim-moi/rua-toi-cho-quy/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             8
             </dd>
             <br/>
            </dl>
@@ -1787,18 +1787,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giai-thoat-2" title="Giải thoát">
+          <a class="list-top-movie-link" href="/phim-moi/co-nang-ban-hoa-2-vs-1" title="Cô Nàng Bán Hoa 2 vs 1">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giai-thoat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-ban-hoa-2-vs-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giải thoát
+             Cô Nàng Bán Hoa 2 vs 1
             </span>
             <span class="list-top-movie-item-en">
-             Enough
+             2대1 섹스배달부 : 무삭제
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bi-mat-doc" title="Bí mật độc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-mat-doc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bí mật độc
+            </span>
+            <span class="list-top-movie-item-en">
+             Secret Poison
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-la-kho-khan" title="Tình yêu là khó khăn">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-la-kho-khan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tình yêu là khó khăn
+            </span>
+            <span class="list-top-movie-item-en">
+             Love is Tricky
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
@@ -1809,87 +1853,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/fast-five" title="Fast Five">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-giao-dich" title="Cuộc giao dịch">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fast-five-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-giao-dich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Fast Five
+             Cuộc giao dịch
             </span>
             <span class="list-top-movie-item-en">
-             Fast Five
+             The Exchange
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/truy-nguyet" title="Truy Nguyệt">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-nguyet-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Truy Nguyệt
+            </span>
+            <span class="list-top-movie-item-en">
+             Off the Stage
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phuong-the-ngoc-2" title="Phương Thế Ngọc 2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phuong-the-ngoc-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Phương Thế Ngọc 2
-            </span>
-            <span class="list-top-movie-item-en">
-             The Legend II
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhat-ky-moi-tinh-dien-vien" title="Nhật ký mối tình điền viên">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhat-ky-moi-tinh-dien-vien-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nhật ký mối tình điền viên
-            </span>
-            <span class="list-top-movie-item-en">
-             Once Upon a Small Town
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bach-luyen-thanh-than" title="Bách Luyện Thành Thần">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bach-luyen-thanh-than-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bách Luyện Thành Thần
-            </span>
-            <span class="list-top-movie-item-en">
-             Bách Luyện Thành Thần
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
